WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30534
WebLocalizedString asserts if called from multiple threads concurrently
https://bugs.webkit.org/show_bug.cgi?id=30534
Summary
WebLocalizedString asserts if called from multiple threads concurrently
Adam Roben (:aroben)
Reported
2009-10-19 14:14:55 PDT
Created
attachment 41448
[details]
Patch v1 WebLocalizedString accesses two global HashMaps. If this function is called from more than one thread concurrently, we'll assert.
Attachments
Patch v1
(2.78 KB, patch)
2009-10-19 14:14 PDT
,
Adam Roben (:aroben)
mitz: review+
Details
Formatted Diff
Diff
Fix crashes/assertions when calling WebLocalizedString from multiple threads concurrently
(2.82 KB, patch)
2009-10-19 14:19 PDT
,
Adam Roben (:aroben)
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2009-10-19 14:19:36 PDT
Created
attachment 41450
[details]
Fix crashes/assertions when calling WebLocalizedString from multiple threads concurrently
Adam Roben (:aroben)
Comment 2
2009-10-19 15:04:00 PDT
Committed
r49814
: <
http://trac.webkit.org/changeset/49814
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug