Fix crashes/assertions when calling WebLocalizedString from multiple threads concurrently

Fixes <http://webkit.org/b/30534> WebLocalizedString asserts if called
from multiple threads concurrently

Reviewed by John Sullivan.

* WebLocalizableStrings.cpp:
(mainBundleLocStringsMutex):
(frameworkLocStringsMutex):
Added these new getters.

(findCachedString):
(cacheString):
Lock the relevant mutex before accessing each string map. Otherwise
bad things could happen if two threads end up here at the same time.

Canonical link: https://commits.webkit.org/41268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49814 268f45cc-cd09-0410-ab3c-d52691b4dbfc